--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="right-header">
                 <h1 class="name">
                     Hi, My name is <span>Jayla House.</span>
-                    and i am a very passionate software developer. 
+                    I am a passionate software developer. 
                 </h1>
                 <p>
                     I have received my CompTIA Security+ certification and a BS in computer science. 
