--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>
                     I have received my CompTIA Security+ certification and a BS in computer science. 
                     My favorite hobby is creating video games in Unity using C# code. 
-                    I am also proficient in many other languages. Please check out some of my projects.  
+                    I am also proficient in many other programming languages. Please check out some of my projects.  
                 </p>
                 <div class="btn-con">
                     <a href="https://github.com/JaylaHouse/Resume/blob/master/JaylaHouseBAHFormattedResume.docx" class="main-btn">
