--- a/index.html
+++ b/index.html
@@ -119,6 +119,20 @@
                         </div>
                     </div>
                 </div>
+                 <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img\BoneRunner.png" alt="Image of BoneRunner Game">
+                        <p>Bone Runner (Google Play Store Game)</p>
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://play.google.com/store/apps/details?id=com.DefaultCompany.DogSubwaySurfer" class="icon">
+                                <i class="fa-brands fa-square-google-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </section>
