Added Games Update

--- a/index.html
+++ b/index.html
@@ -119,20 +119,81 @@
                         </div>
                     </div>
                 </div>
-                 <div class="portfolio-item">
+                <div class="portfolio-item">
                     <div class="image">
                         <img src="img\BoneRunner.png" alt="Image of BoneRunner Game">
-                        <p>Bone Runner (Google Play Store Game)</p>
+                        <p>Bone Runner (Google Play Store and Itch.io Game Jam Game)</p>
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
                             <a href="https://play.google.com/store/apps/details?id=com.DefaultCompany.DogSubwaySurfer" class="icon">
-                                <i class="fa-brands fa-square-google-plus"></i>
+                                <i class="fab fa-google-play"></i>
+                            </a>
+                            <a href="https://danyel-dev.itch.io/bonerunner" class="icon">
+                                <i class="fab fa-itch-io"></i>
                             </a>
                         </div>
                     </div>
                 </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img\MelicornHop.png" alt="Image of BoneRunner Game">
+                        <p>Melicorn Hop (Google Play Store)</p>
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://play.google.com/store/apps/details?id=com.Danyelstudios.MelicornHop" class="icon">
+                                <i class="fab fa-google-play"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img\PhillCS.png" alt="Image of BoneRunner Game">
+                        <p>Phill's Crab Shack (Itch.io Game Jam Game)</p>
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://danyel-dev.itch.io/phills-crab-shack" class="icon">
+                                <i class="fab fa-itch-io"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img\myLilPlant.png" alt="Image of BoneRunner Game">
+                        <p>My Lil Plant (Itch.io Game Jam Game)</p>
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://danyel-dev.itch.io/my-lil-plant" class="icon">
+                                <i class="fab fa-itch-io"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img\3Dpapa.png" alt="Image of BoneRunner Game">
+                        <p>Papa's Cheeseria Order Chaos (Itch.io Game Jam Game)</p>
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://danyel-dev.itch.io/papas-cheeeseria-orde-chaos" class="icon">
+                                <i class="fab fa-itch-io"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
 
             </div>
         </section>
